Add NavBar component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>File Reader</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="font-mono" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
